--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,29 +1,145 @@
 .header_active {
-    height: 15vh;
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0);
-    color: #f5f5f7;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    text-align: center;
-    position: absolute;
+  height: 15vh;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0);
+  color: #f5f5f7;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  position: absolute;
   z-index: 1;
-  }
+}
 .header {
-    height: 11vh;
-    width: 100%;
-    background-color: rgb(161, 161, 161);
-    color: #f5f5f7;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    text-align: center;
-  }
+  height: 11vh;
+  width: 100%;
+  background-color: rgb(161, 161, 161);
+  color: #f5f5f7;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+}
 
-  .header-icons {
-    width: 10vw;
-    display: flex;
-    justify-content: space-evenly;
-    
-  }
+.header-icons {
+  width: 15vw;
+  display: flex;
+  justify-content: space-evenly;
+}
+.sign-btn {
+  background-color: rgba(0, 0, 0, 0);
+  border: 1px solid white;
+  color: white;
+  height: 20px;
+  width: 60px;
+  border-radius: 10px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 5px;
+}
+
+.hamburger-menu {
+  width: 15vw;
+  z-index: 1000;
+}
+
+#menu__toggle {
+  opacity: 0;
+}
+
+#menu__toggle:checked ~ .menu__btn > span {
+  transform: rotate(45deg);
+  background-color: black;
+}
+#menu__toggle:checked ~ .menu__btn > span::before {
+  top: 0;
+  transform: rotate(0);
+  background-color: black;
+}
+#menu__toggle:checked ~ .menu__btn > span::after {
+  top: 0;
+  transform: rotate(90deg);
+  background-color: black;
+}
+#menu__toggle:checked ~ .menu__box {
+  visibility: visible;
+  left: 0;
+}
+
+.menu__btn {
+  display: flex;
+  align-items: center;
+  position: fixed;
+  top: 20px;
+  left: 20px;
+
+  width: 26px;
+  height: 26px;
+
+  cursor: pointer;
+  z-index: 1;
+}
+
+.menu__btn > span,
+.menu__btn > span::before,
+.menu__btn > span::after {
+  display: block;
+  position: absolute;
+
+  width: 100%;
+  height: 2px;
+
+  background-color: #ffffff;
+
+  transition-duration: 0.25s;
+}
+.menu__btn > span::before {
+  content: "";
+  top: -8px;
+}
+.menu__btn > span::after {
+  content: "";
+  top: 8px;
+}
+
+.menu__box {
+  display: block;
+  position: fixed;
+  visibility: hidden;
+  top: 0;
+  left: -100%;
+
+  width: 170px;
+  height: 100%;
+
+  margin: 0;
+  padding: 80px 0;
+
+  list-style: none;
+
+  background-color: #f5f5f7cc;
+  box-shadow: 1px 0px 6px rgba(0, 0, 0, 0.2);
+
+  transition-duration: 0.25s;
+}
+
+.menu__item {
+  display: block;
+  padding: 12px 24px;
+
+  color: #333;
+
+  font-family: "Roboto", sans-serif;
+  font-size: 15px;
+  font-weight: 400;
+
+  text-decoration: none;
+
+  transition-duration: 0.25s;
+}
+.menu__item:hover {
+  /* background-color: #a2aaad; */
+  cursor: pointer;
+}
