--- a/src/components/Comments/Comment.css
+++ b/src/components/Comments/Comment.css
@@ -1,6 +1,7 @@
 .comment-btn {
+    margin: 5px 0 20px 0;
     text-align: center;
-    border: 3px solid #ffffff50;
+    border: 1px solid rgba(192, 192, 192, 0);
     padding: 15px 25px;
     border-radius: 5px;
     cursor: pointer;
@@ -18,12 +19,13 @@
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    background-color: rgba(0, 0, 0, 0);
+    background-color: rgb(70, 180, 70);
     font-size: 15px;
     font-weight: 500;
     letter-spacing: 2px;
     text-transform: uppercase;
-    color: #fff;
+    /* color: #fff; */
+    color: black;
     height: 8px;
     -webkit-transition-duration: 0.2s;
             transition-duration: 0.2s;
