--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -16,3 +16,46 @@
     margin-bottom: 20px;
     font-weight: 400
 }
+
+@media (max-width: 970px) {
+  p {
+    font-size: 90%;
+  }
+}
+@media (max-width: 880px) {
+  p {
+    font-size: 80%;
+  }
+}
+@media (max-width: 780px) {
+  p {
+    font-size: 70%;
+  }
+  h2 {
+    font-size: 90%;
+  }
+  .douglas-img {
+    width: 150px;
+  }
+}
+@media (max-width: 670px) {
+  p {
+    font-size: 60%;
+  }
+}
+@media (max-width: 585px) {
+  h2 {
+    font-size: 80%;
+  }
+  .douglas-img {
+    width: 120px;
+  }
+
+}
+
+@media (max-width: 670px) {
+  .img-home {
+    /* display: none; */
+    /* flex-wrap: wrap; */
+  }
+}
